<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about_app_info">App Info</string>
    <string name="about_contact_us">Contact Us</string>
    <string name="about_contribute">GitHub Project</string>
    <string name="about_contribute_description">This app is open-sourced on GitHub - check it out, contribute, and share the knowledge!</string>
    <string name="about_contribute_github">github.com/davidschwegler/lfnw</string>
    <string name="about_author">David Schwegler</string>
    <string name="about_licenses">Licenses</string>
    <string name="app_name">LinuxFest Northwest</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="sessions_navigation_year_format">%1$s sessions</string>
    <string name="sessions_navigation_year_starred_format">Starred %1$s sessions</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_open_in_browser">Open in browser</string>
    <string name="generic_copy">Copy</string>
    <string name="generic_later">Later</string>
    <string name="generic_ok">Ok</string>
    <string name="generic_retry">Retry</string>
    <string name="scanned_badge_send_email">Send email</string>
    <string name="scanned_badge_add_to_contacts">Add contact</string>
    <string name="scanned_badge_redownload">Retry contact download</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_scan_badge">Scan badge</string>
    <string name="about_version">Version</string>
    <string name="about_support_description">Please email with problems, questions, or suggestions!</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sessions_room_prefix">Room</string>
    <string name="support_email_subject_prefix">Contact</string>
    <string name="sessions_title">Sessions</string>
    <string name="scan_badge_title">Scan Badge</string>
    <string name="scan_badge_list_empty">Scan the QR code on a friend\'s badge\nto get their contact info!</string>
    <string name="scan_badge_downloading_contact">Downloading contact card from LinuxFest…</string>
    <string name="scan_badge_download_contact_failed">Could not download contact card from LinuxFest - check your internet connection. The link has been saved so you can try again later.</string>
    <string name="scan_badge_download_contact_parse_failed">Could not read contact card from LinuxFest. The link has been saved so you can try again later.</string>
    <string name="scan_badge_download_contact_failed_toast">Download this contact later by tapping it.</string>
    <string name="tickets_title">Event Tickets</string>
    <string name="no_sessions">No sessions.</string>
    <string name="menu_scan_badge_export">Export</string>
    <string name="about_title">Help</string>
    <string name="sponsors_title">Sponsors</string>
    <string name="venue_title">Venue</string>
    <string name="register_title">Register</string>
    <string name="support_email">developer@appenjoyment.com</string>
    <string name="license_circular_image_view">CircularImageView\nCopyright 2016 Lopez Mikhael\nLicensed under the Apache License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\thttp://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an "AS IS" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.</string>
    <string name="license_commons_codec">Apache Commons Codec\nCopyright 2002-2012 The Apache Software Foundation\nLicensed under the Apache License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\thttp://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an "AS IS" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.</string>
    <string name="license_freemarker">Freemarker\nCopyright © 2003 The Visigoth Software Society. All rights reserved.\nThis product includes software developed by the\nVisigoth Software Society (http://www.visigoths.org/).</string>
    <string name="license_ez_vcard">ez-vcard\nCopyright © 2013, ez-vcard\nAll rights reserved.\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n\tRedistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n\tRedistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\tNeither the name of ez-vcard nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="license_jsoup">jsoup\nCopyright © 2009-2013 Jonathan Hedley (jonathan@hedley.net)\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="license_stickylistheaders">StickyListHeaders\nCopyright 2012 Emil Sjölander\nLicensed under the Apache License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\thttp://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an "AS IS" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.</string>
    <string name="license_zxing_scanning_via_intent">zxing ScanningViaIntent\nCopyright 2009 ZXing authors\nLicensed under the Apache License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\thttp://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an "AS IS" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.</string>
</resources>